RESOLVED FIXED19603
[SOUP] segfault when closing a file using gio
https://bugs.webkit.org/show_bug.cgi?id=19603
Summary [SOUP] segfault when closing a file using gio
Marco Barisione
Reported 2008-06-17 04:42:26 PDT
Sometimes it's possible to get a segfault or a critical warning when the soup back-ends closes a local file.
Attachments
Fix the segfault calling client->didFinishLoading() only after releasing all the gio resources. (1.98 KB, patch)
2008-06-17 04:49 PDT, Marco Barisione
eric: review+
Marco Barisione
Comment 1 2008-06-17 04:49:34 PDT
Created attachment 21754 [details] Fix the segfault calling client->didFinishLoading() only after releasing all the gio resources.
Jan Alonzo
Comment 2 2008-06-20 13:32:02 PDT
*** Bug 19546 has been marked as a duplicate of this bug. ***
Gustavo Noronha (kov)
Comment 3 2008-07-08 17:09:27 PDT
I hit this bug while trying to enable the webinspector for webkit/gtk+, so I applied the patch and tested. It works correctly for me.
Jan Alonzo
Comment 4 2008-07-11 15:38:38 PDT
Raising this to P1 as this fixes a crasher in the Gtk SOUP backend when using file:///
Eric Seidel (no email)
Comment 5 2008-08-01 16:55:53 PDT
Comment on attachment 21754 [details] Fix the segfault calling client->didFinishLoading() only after releasing all the gio resources. Looks sane.
Jan Alonzo
Comment 6 2008-08-01 22:01:51 PDT
landed in r35520
Note You need to log in before you can comment on or make changes to this bug.