2008-06-17  Marco Barisione  <marco.barisione@collabora.co.uk>

Reviewed by Eric Seidel.

        https://bugs.webkit.org/show_bug.cgi?id=19603
        [SOUP] segfault when closing a file using gio

        Call client->didFinishLoading() only after releasing all the gio
        resources.

        * platform/network/soup/ResourceHandleSoup.cpp:
        (WebCore::closeCallback):
        (WebCore::readCallback):

Canonical link: https://commits.webkit.org/27938@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@35520 268f45cc-cd09-0410-ab3c-d52691b4dbfc